{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 117,
  "lineage": "329974b2-3583-bd61-3693-118becb5c862",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "splunk-index-cluster-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca285d4c2cda3300",
            "arn": "arn:aws:ec2:us-west-2:095262149203:instance/i-00581ea20553045da",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00581ea20553045da",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a52a76590b569d61",
            "private_dns": "ip-172-16-10-156.us-west-2.compute.internal",
            "private_ip": "172.16.10.156",
            "public_ip": "35.166.87.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0090b1bb31f70558e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0577584ec8e856589",
            "tags": {
              "Name": "splunk-index-cluster-1"
            },
            "tags_all": {
              "Name": "splunk-index-cluster-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08288968b9e0f5d0b"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform-demo",
            "aws_security_group.splunk_sg",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.AZ",
            "data.http.my_public_ip"
          ]
        },
        {
          "index_key": "splunk-index-cluster-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca285d4c2cda3300",
            "arn": "arn:aws:ec2:us-west-2:095262149203:instance/i-011e6fb8a06032741",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-011e6fb8a06032741",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b8bf9266970e4c35",
            "private_dns": "ip-172-16-10-141.us-west-2.compute.internal",
            "private_ip": "172.16.10.141",
            "public_ip": "34.222.50.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0952e87c119e15c53",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0577584ec8e856589",
            "tags": {
              "Name": "splunk-index-cluster-2"
            },
            "tags_all": {
              "Name": "splunk-index-cluster-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08288968b9e0f5d0b"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform-demo",
            "aws_security_group.splunk_sg",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.AZ",
            "data.http.my_public_ip"
          ]
        },
        {
          "index_key": "splunk-index-cluster-3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca285d4c2cda3300",
            "arn": "arn:aws:ec2:us-west-2:095262149203:instance/i-0c7439844fa956719",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7439844fa956719",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-026d315521cd64e30",
            "private_dns": "ip-172-16-10-188.us-west-2.compute.internal",
            "private_ip": "172.16.10.188",
            "public_ip": "35.163.225.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09be59aa9c30346db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0577584ec8e856589",
            "tags": {
              "Name": "splunk-index-cluster-3"
            },
            "tags_all": {
              "Name": "splunk-index-cluster-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08288968b9e0f5d0b"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform-demo",
            "aws_security_group.splunk_sg",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.AZ",
            "data.http.my_public_ip"
          ]
        },
        {
          "index_key": "splunk-mgmt-cm-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca285d4c2cda3300",
            "arn": "arn:aws:ec2:us-west-2:095262149203:instance/i-0ff3c302b1cc9d3fe",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ff3c302b1cc9d3fe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d15b1b107d02888f",
            "private_dns": "ip-172-16-10-57.us-west-2.compute.internal",
            "private_ip": "172.16.10.57",
            "public_ip": "54.189.169.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-036164007adb46854",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0577584ec8e856589",
            "tags": {
              "Name": "splunk-mgmt-cm-1"
            },
            "tags_all": {
              "Name": "splunk-mgmt-cm-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08288968b9e0f5d0b"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform-demo",
            "aws_security_group.splunk_sg",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.AZ",
            "data.http.my_public_ip"
          ]
        },
        {
          "index_key": "splunk-mgmt-ds-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca285d4c2cda3300",
            "arn": "arn:aws:ec2:us-west-2:095262149203:instance/i-0083fce7811a01668",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0083fce7811a01668",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e1823280c7943074",
            "private_dns": "ip-172-16-10-204.us-west-2.compute.internal",
            "private_ip": "172.16.10.204",
            "public_ip": "34.219.145.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f2e6c1ae9c5d6ea0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0577584ec8e856589",
            "tags": {
              "Name": "splunk-mgmt-ds-1"
            },
            "tags_all": {
              "Name": "splunk-mgmt-ds-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08288968b9e0f5d0b"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform-demo",
            "aws_security_group.splunk_sg",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.AZ",
            "data.http.my_public_ip"
          ]
        },
        {
          "index_key": "splunk-mgmt-lm-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca285d4c2cda3300",
            "arn": "arn:aws:ec2:us-west-2:095262149203:instance/i-00c37e7c41bee731e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c37e7c41bee731e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-079bb30f621b4e89f",
            "private_dns": "ip-172-16-10-221.us-west-2.compute.internal",
            "private_ip": "172.16.10.221",
            "public_ip": "54.190.44.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0322c595ec0e1cb35",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0577584ec8e856589",
            "tags": {
              "Name": "splunk-mgmt-lm-1"
            },
            "tags_all": {
              "Name": "splunk-mgmt-lm-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08288968b9e0f5d0b"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform-demo",
            "aws_security_group.splunk_sg",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.AZ",
            "data.http.my_public_ip"
          ]
        },
        {
          "index_key": "splunk-mgmt-mc-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca285d4c2cda3300",
            "arn": "arn:aws:ec2:us-west-2:095262149203:instance/i-0fda71639253c462d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fda71639253c462d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0011c89e75eadbede",
            "private_dns": "ip-172-16-10-131.us-west-2.compute.internal",
            "private_ip": "172.16.10.131",
            "public_ip": "54.188.80.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d93a2a1dd7ffae46",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0577584ec8e856589",
            "tags": {
              "Name": "splunk-mgmt-mc-1"
            },
            "tags_all": {
              "Name": "splunk-mgmt-mc-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08288968b9e0f5d0b"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform-demo",
            "aws_security_group.splunk_sg",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.AZ",
            "data.http.my_public_ip"
          ]
        },
        {
          "index_key": "splunk-search-cluster-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca285d4c2cda3300",
            "arn": "arn:aws:ec2:us-west-2:095262149203:instance/i-0bbe725ff2d89a7a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bbe725ff2d89a7a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-024a845b95f4c6903",
            "private_dns": "ip-172-16-10-121.us-west-2.compute.internal",
            "private_ip": "172.16.10.121",
            "public_ip": "52.41.213.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-058056434d60779e8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0577584ec8e856589",
            "tags": {
              "Name": "splunk-search-cluster-1"
            },
            "tags_all": {
              "Name": "splunk-search-cluster-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08288968b9e0f5d0b"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform-demo",
            "aws_security_group.splunk_sg",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.AZ",
            "data.http.my_public_ip"
          ]
        },
        {
          "index_key": "splunk-search-cluster-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca285d4c2cda3300",
            "arn": "arn:aws:ec2:us-west-2:095262149203:instance/i-088e378c519a55a2d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-088e378c519a55a2d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d172e8f13f20183a",
            "private_dns": "ip-172-16-10-122.us-west-2.compute.internal",
            "private_ip": "172.16.10.122",
            "public_ip": "35.88.121.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06a2ba7c8f0011db3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0577584ec8e856589",
            "tags": {
              "Name": "splunk-search-cluster-2"
            },
            "tags_all": {
              "Name": "splunk-search-cluster-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08288968b9e0f5d0b"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform-demo",
            "aws_security_group.splunk_sg",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.AZ",
            "data.http.my_public_ip"
          ]
        },
        {
          "index_key": "splunk-search-cluster-3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca285d4c2cda3300",
            "arn": "arn:aws:ec2:us-west-2:095262149203:instance/i-0a9e4b1df7bee585b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a9e4b1df7bee585b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a8445d2440d5160a",
            "private_dns": "ip-172-16-10-207.us-west-2.compute.internal",
            "private_ip": "172.16.10.207",
            "public_ip": "35.88.161.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b11c9a542172830b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0577584ec8e856589",
            "tags": {
              "Name": "splunk-search-cluster-3"
            },
            "tags_all": {
              "Name": "splunk-search-cluster-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08288968b9e0f5d0b"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform-demo",
            "aws_security_group.splunk_sg",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.AZ",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:095262149203:internet-gateway/igw-096b13cc760a42983",
            "id": "igw-096b13cc760a42983",
            "owner_id": "095262149203",
            "vpc_id": "vpc-001956dd17a322296"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0839261177ad5e25f",
            "original_route_table_id": "rtb-056901e7226fd81e5",
            "route_table_id": "rtb-0aeda233b72a14e0e",
            "vpc_id": "vpc-001956dd17a322296"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:095262149203:network-interface/eni-0b6f8f051dfe4b640",
            "id": "eni-0b6f8f051dfe4b640",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:1c:de:84:ae:e3",
            "owner_id": "095262149203",
            "private_ip": "172.16.10.100",
            "private_ip_list": [
              "172.16.10.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.10.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-08288968b9e0f5d0b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0577584ec8e856589",
            "tags": {
              "Name": "primary_network_interface"
            },
            "tags_all": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.splunk_sg",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.AZ",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-096b13cc760a42983",
            "id": "r-rtb-0aeda233b72a14e0e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aeda233b72a14e0e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:095262149203:route-table/rtb-0aeda233b72a14e0e",
            "id": "rtb-0aeda233b72a14e0e",
            "owner_id": "095262149203",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-001956dd17a322296"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "splunk_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:095262149203:security-group/sg-08288968b9e0f5d0b",
            "description": "Splunk Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08288968b9e0f5d0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "73.221.150.23/32"
                ],
                "description": "API Access",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              },
              {
                "cidr_blocks": [
                  "73.221.150.23/32"
                ],
                "description": "UI Access",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "Splunk SG",
            "name_prefix": "",
            "owner_id": "095262149203",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "splunk_sg"
            },
            "tags_all": {
              "Name": "splunk_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-001956dd17a322296"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:095262149203:subnet/subnet-0577584ec8e856589",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0577584ec8e856589",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "095262149203",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-subnet"
            },
            "tags_all": {
              "Name": "my-subnet"
            },
            "vpc_id": "vpc-001956dd17a322296"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.AZ"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:095262149203:vpc/vpc-001956dd17a322296",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0e9007e239e331032",
            "default_route_table_id": "rtb-056901e7226fd81e5",
            "default_security_group_id": "sg-03495a31566a120cc",
            "dhcp_options_id": "dopt-07e53fa87913efee8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-001956dd17a322296",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-056901e7226fd81e5",
            "owner_id": "095262149203",
            "tags": {
              "Name": "tf-example-2"
            },
            "tags_all": {
              "Name": "tf-example-2"
            }
          }
        }
      ]
    }
  ]
}